--- a/index.html
+++ b/index.html
@@ -25,37 +25,39 @@
 </head>
 <body class="bg-gray-300 text-gray-800">
 
-  <header class="bg-blue-900 text-white py-4 text-center space-y-2">
+  <header class="bg-blue-900 text-white py-4 text-center">
     <h1 class="text-xl font-bold">پورتفوی طلای آبشده و صندوق عیار</h1>
-    <div class="text-sm font-bold space-y-1 persian-numbers">
-      <div id="usd-box">دلار: ...</div>
-      <div id="xauusd-box">انس: ...</div>
-    </div>
   </header>
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
+
+    <!-- باکس نمایش نرخ انس و دلار -->
+    <section id="market-info" class="bg-white rounded-xl shadow-md p-4 text-center space-y-2">
+      <div id="xauusd-box" class="persian-numbers text-lg font-bold">انس: ...</div>
+      <div id="usd-box" class="persian-numbers text-lg font-bold">دلار: ...</div>
+    </section>
     
-     <section id="gold-box" class="bg-gradient-to-br from-green-800 to-green-400 rounded-xl shadow-md p-6 text-center">
-     <h2 class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
-     <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">در حال بارگذاری...</p>
-     <small id="gold-change" class="block mt-1 text-base persian-numbers drop-shadow">...</small>
-  </section>
+    <section id="gold-box" class="bg-gradient-to-br from-green-800 to-green-400 rounded-xl shadow-md p-6 text-center">
+      <h2 class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
+      <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">در حال بارگذاری...</p>
+      <small id="gold-change" class="block mt-1 text-base text-white persian-numbers drop-shadow">...</small>
+    </section>
 
-  <section class="bg-gradient-to-br from-purple-800 to-purple-400 rounded-xl shadow-md p-6 text-center">
-    <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">ارزش طلای آبشده</h3>
-    <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
-  </section>
+    <section class="bg-gradient-to-br from-purple-800 to-purple-400 rounded-xl shadow-md p-6 text-center">
+      <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">ارزش طلای آبشده</h3>
+      <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
+    </section>
 
-  <section id="profit-box" class="rounded-xl p-6 text-center text-yellow-400 persian-numbers">
-    در حال محاسبه سود/زیان...
-  </section>
+    <section id="profit-box" class="rounded-xl p-6 text-center text-yellow-400 persian-numbers">
+      در حال محاسبه سود/زیان...
+    </section>
 
-  <section class="bg-white rounded-xl shadow-md p-6 text-center">
-    <h3 class="text-xl font-extrabold text-blue-700 mb-2 drop-shadow">دارایی کل</h3>
-    <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
-  </section>
+    <section class="bg-white rounded-xl shadow-md p-6 text-center">
+      <h3 class="text-xl font-extrabold text-blue-700 mb-2 drop-shadow">دارایی کل</h3>
+      <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
+    </section>
 
-  <p id="last-update" class="text-sm text-gray-500 text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
+    <p id="last-update" class="text-sm text-gray-500 text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
 
   </main>
 
@@ -77,22 +79,8 @@
       try {
         const response = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
         const data = await response.json();
-
         const items = data.gold;
         const gold18 = items.find(i => i.symbol === "IR_GOLD_18K");
-        const usd = items.find(i => i.symbol === "USD");
-        const xauusd = items.find(i => i.symbol === "XAUUSD");
-
-        if (usd) {
-        const usdColor = getColorClass(usd.change_percent);
-        const usdText = `<span class="${usdColor}">دلار: ${toPersianNumber(usd.price.toLocaleString())} (${toPersianNumber(Math.abs(usd.change_percent).toFixed(2))}%)</span>`;
-        animateElement("usd-info", usdText);
-        }
-
-        if (xauusd) {
-          const color = xauusd.change_value > 0 ? 'green' : xauusd.change_value < 0 ? 'red' : 'black';
-          animateElement("xauusd-box", `<span style="color:${color}">انس: ${toPersianNumber(xauusd.price.toLocaleString())} (${toPersianNumber(Math.abs(xauusd.change_value))} | ${toPersianNumber(Math.abs(xauusd.change_percent.toFixed(2)))}%)</span>`);
-        }
 
         if (gold18) {
           animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()));
@@ -102,8 +90,10 @@
           let percentStr = Math.abs(percent).toFixed(2);
           let valueText = toPersianNumber(valueStr);
           let percentText = toPersianNumber(percentStr);
-          let color = percent > 0 ? 'green' : percent < 0 ? 'red' : 'black';
-          animateElement("gold-change", `<span style="color:${color}">${valueText} (%${percentText})</span>`);
+          animateElement("gold-change", valueText + " (%" + percentText + ")");
+
+          const changeColor = percent > 0 ? "green" : percent < 0 ? "red" : "black";
+          document.getElementById("gold-change").style.color = changeColor;
 
           const goldPrice = gold18.price;
           const myGoldGrams = 438.44;
@@ -117,16 +107,19 @@
 
           const profitBox = document.getElementById("profit-box");
           profitBox.className = "bg-gradient-to-br from-blue-800 to-blue-400 rounded-xl shadow-md p-6 text-center";
+
           try {
             const total = 4524;
             const ayarResponse = await fetch("https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1");
             const symbols = await ayarResponse.json();
             const ayar = symbols.find(i => i.l18 === "عیار");
+
             if (ayar && ayar.pc) {
               const result = total * (ayar.pc / 10);
               const combined = totalGoldValue + result;
               animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
               animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
+
               animateElement("profit-box", `
                 <div class="text-xl font-extrabold drop-shadow text-yellow-300">
                   ارزش صندوق عیار (${toPersianNumber(total.toLocaleString())} واحد)
@@ -144,6 +137,26 @@
           } catch (err) {
             console.error("خطا در دریافت اطلاعات صندوق عیار:", err);
             animateElement("profit-box", "خطا در دریافت قیمت صندوق");
+          }
+
+          const xauusd = items.find(i => i.symbol === "XAUUSD");
+          if (xauusd) {
+            const text = `انس: ${toPersianNumber(xauusd.price.toLocaleString())} (${toPersianNumber(Math.abs(xauusd.change_percent).toFixed(2))}٪)`;
+            const box = document.getElementById("xauusd-box");
+            box.innerHTML = text;
+            if (xauusd.change_percent > 0) box.style.color = "green";
+            else if (xauusd.change_percent < 0) box.style.color = "red";
+            else box.style.color = "black";
+          }
+
+          const usd = items.find(i => i.symbol === "USD");
+          if (usd) {
+            const text = `دلار: ${toPersianNumber(usd.price.toLocaleString())} (${toPersianNumber(Math.abs(usd.change_percent).toFixed(2))}٪)`;
+            const box = document.getElementById("usd-box");
+            box.innerHTML = text;
+            if (usd.change_percent > 0) box.style.color = "green";
+            else if (usd.change_percent < 0) box.style.color = "red";
+            else box.style.color = "black";
           }
 
           const now = new Date();
