--- a/index.html
+++ b/index.html
@@ -29,18 +29,14 @@
     <h1 class="text-xl font-bold">پورتفوی طلای آبشده و صندوق عیار</h1>
   </header>
 
+  <div id="xauusd-info" class="text-sm font-bold persian-numbers text-center mt-2"></div>
+
   <main class="max-w-xl mx-auto p-4 space-y-4">
 
-    <!-- باکس نمایش نرخ انس و دلار -->
-    <section id="market-info" class="bg-white rounded-xl shadow-md p-4 text-center space-y-2">
-      <div id="xauusd-box" class="persian-numbers text-lg font-bold">انس: ...</div>
-      <div id="usd-box" class="persian-numbers text-lg font-bold">دلار: ...</div>
-    </section>
-    
     <section id="gold-box" class="bg-gradient-to-br from-green-800 to-green-400 rounded-xl shadow-md p-6 text-center">
       <h2 class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
       <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">در حال بارگذاری...</p>
-      <small id="gold-change" class="block mt-1 text-base text-white persian-numbers drop-shadow">...</small>
+      <small id="gold-change" class="block mt-1 text-base persian-numbers drop-shadow">...</small>
     </section>
 
     <section class="bg-gradient-to-br from-purple-800 to-purple-400 rounded-xl shadow-md p-6 text-center">
@@ -79,21 +75,28 @@
       try {
         const response = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
         const data = await response.json();
+
         const items = data.gold;
         const gold18 = items.find(i => i.symbol === "IR_GOLD_18K");
 
         if (gold18) {
           animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()));
+
           let value = gold18.change_value;
           let percent = gold18.change_percent;
           let valueStr = Math.abs(value).toLocaleString();
           let percentStr = Math.abs(percent).toFixed(2);
           let valueText = toPersianNumber(valueStr);
           let percentText = toPersianNumber(percentStr);
-          animateElement("gold-change", valueText + " (%" + percentText + ")");
 
-          const changeColor = percent > 0 ? "green" : percent < 0 ? "red" : "black";
-          document.getElementById("gold-change").style.color = changeColor;
+          let colorClass = "text-black";
+          if (percent > 0) colorClass = "text-green-500";
+          else if (percent < 0) colorClass = "text-red-500";
+
+          animateElement("gold-change", `<span class="${colorClass}">${valueText} (%${percentText})</span>`);
+
+          const goldBox = document.getElementById("gold-box");
+          goldBox.className = "bg-gradient-to-br from-green-800 to-green-400 rounded-xl shadow-md p-6 text-center";
 
           const goldPrice = gold18.price;
           const myGoldGrams = 438.44;
@@ -101,7 +104,6 @@
           const commission = 30000;
 
           document.getElementById("portfolio-title").innerText = `ارزش طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
-          animateElement("gold-amount");
           const totalGoldValue = ((goldPrice - commission) * goldPurity / 750 ) * myGoldGrams;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
@@ -118,7 +120,6 @@
               const result = total * (ayar.pc / 10);
               const combined = totalGoldValue + result;
               animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
-              animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
               animateElement("profit-box", `
                 <div class="text-xl font-extrabold drop-shadow text-yellow-300">
@@ -139,30 +140,32 @@
             animateElement("profit-box", "خطا در دریافت قیمت صندوق");
           }
 
+          // نمایش انس طلا (XAUUSD)
           const xauusd = items.find(i => i.symbol === "XAUUSD");
           if (xauusd) {
-            const text = `انس: ${toPersianNumber(xauusd.price.toLocaleString())} (${toPersianNumber(Math.abs(xauusd.change_percent).toFixed(2))}٪)`;
-            const box = document.getElementById("xauusd-box");
-            box.innerHTML = text;
-            if (xauusd.change_percent > 0) box.style.color = "green";
-            else if (xauusd.change_percent < 0) box.style.color = "red";
-            else box.style.color = "black";
-          }
+            const xauPrice = xauusd.price;
+            const xauChange = xauusd.change_value;
+            const xauPercent = xauusd.change_percent;
 
-          const usd = items.find(i => i.symbol === "USD");
-          if (usd) {
-            const text = `دلار: ${toPersianNumber(usd.price.toLocaleString())} (${toPersianNumber(Math.abs(usd.change_percent).toFixed(2))}٪)`;
-            const box = document.getElementById("usd-box");
-            box.innerHTML = text;
-            if (usd.change_percent > 0) box.style.color = "green";
-            else if (usd.change_percent < 0) box.style.color = "red";
-            else box.style.color = "black";
+            const xauPriceText = toPersianNumber(xauPrice.toLocaleString());
+            const xauChangeText = toPersianNumber(Math.abs(xauChange).toLocaleString());
+            const xauPercentText = toPersianNumber(Math.abs(xauPercent).toFixed(2));
+
+            let xauColor = "text-black";
+            if (xauPercent > 0) xauColor = "text-green-600";
+            else if (xauPercent < 0) xauColor = "text-red-600";
+
+            animateElement("xauusd-info", `
+              <span>انس: ${xauPriceText}</span>
+              <span class="${xauColor}"> (${xauChangeText} | ${xauPercentText}%)</span>
+            `);
           }
 
           const now = new Date();
           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
           const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
           document.getElementById("last-update").innerText = `آخرین به‌روزرسانی: ${formattedDate} ساعت ${formattedTime}`;
+
         } else {
           animateElement("gold-price", "اطلاعات موجود نیست");
           animateElement("portfolio-value", "نامشخص");
