--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
 </head>
 <body class="bg-gray-300 text-gray-800">
 
-  <header class="bg-blue-900 text-white py-4 text-center">
+  <header class="bg-blue-900 text-white py-4 text-center space-y-2">
     <h1 class="text-xl font-bold">پورتفوی طلای آبشده و صندوق عیار</h1>
+    <div class="text-sm font-bold space-y-1 persian-numbers">
+      <div id="usd-box">دلار: ...</div>
+      <div id="xauusd-box">انس: ...</div>
+    </div>
   </header>
 
-  <div id="xauusd-info" class="text-sm font-bold persian-numbers text-center mt-2"></div>
-
   <main class="max-w-xl mx-auto p-4 space-y-4">
-
+    
     <section id="gold-box" class="bg-gradient-to-br from-green-800 to-green-400 rounded-xl shadow-md p-6 text-center">
       <h2 class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
       <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">در حال بارگذاری...</p>
@@ -78,25 +80,29 @@
 
         const items = data.gold;
         const gold18 = items.find(i => i.symbol === "IR_GOLD_18K");
+        const usd = data.currency.find(i => i.symbol === "USD");
+        const xauusd = data.currency.find(i => i.symbol === "XAUUSD");
+
+        if (usd) {
+          const color = usd.change_value > 0 ? 'green' : usd.change_value < 0 ? 'red' : 'black';
+          animateElement("usd-box", `<span style="color:${color}">دلار: ${toPersianNumber(usd.price.toLocaleString())} (${toPersianNumber(Math.abs(usd.change_value))} | ${toPersianNumber(Math.abs(usd.change_percent.toFixed(2)))}%)</span>`);
+        }
+
+        if (xauusd) {
+          const color = xauusd.change_value > 0 ? 'green' : xauusd.change_value < 0 ? 'red' : 'black';
+          animateElement("xauusd-box", `<span style="color:${color}">انس: ${toPersianNumber(xauusd.price.toLocaleString())} (${toPersianNumber(Math.abs(xauusd.change_value))} | ${toPersianNumber(Math.abs(xauusd.change_percent.toFixed(2)))}%)</span>`);
+        }
 
         if (gold18) {
           animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()));
-
           let value = gold18.change_value;
           let percent = gold18.change_percent;
           let valueStr = Math.abs(value).toLocaleString();
           let percentStr = Math.abs(percent).toFixed(2);
           let valueText = toPersianNumber(valueStr);
           let percentText = toPersianNumber(percentStr);
-
-          let colorClass = "text-black";
-          if (percent > 0) colorClass = "text-green-500";
-          else if (percent < 0) colorClass = "text-red-500";
-
-          animateElement("gold-change", `<span class="${colorClass}">${valueText} (%${percentText})</span>`);
-
-          const goldBox = document.getElementById("gold-box");
-          goldBox.className = "bg-gradient-to-br from-green-800 to-green-400 rounded-xl shadow-md p-6 text-center";
+          let color = percent > 0 ? 'green' : percent < 0 ? 'red' : 'black';
+          animateElement("gold-change", `<span style="color:${color}">${valueText} (%${percentText})</span>`);
 
           const goldPrice = gold18.price;
           const myGoldGrams = 438.44;
@@ -104,23 +110,22 @@
           const commission = 30000;
 
           document.getElementById("portfolio-title").innerText = `ارزش طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
+          animateElement("gold-amount");
           const totalGoldValue = ((goldPrice - commission) * goldPurity / 750 ) * myGoldGrams;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
           const profitBox = document.getElementById("profit-box");
           profitBox.className = "bg-gradient-to-br from-blue-800 to-blue-400 rounded-xl shadow-md p-6 text-center";
-
           try {
             const total = 4524;
             const ayarResponse = await fetch("https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1");
             const symbols = await ayarResponse.json();
             const ayar = symbols.find(i => i.l18 === "عیار");
-
             if (ayar && ayar.pc) {
               const result = total * (ayar.pc / 10);
               const combined = totalGoldValue + result;
               animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
-
+              animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
               animateElement("profit-box", `
                 <div class="text-xl font-extrabold drop-shadow text-yellow-300">
                   ارزش صندوق عیار (${toPersianNumber(total.toLocaleString())} واحد)
@@ -140,73 +145,19 @@
             animateElement("profit-box", "خطا در دریافت قیمت صندوق");
           }
 
-          // نمایش انس طلا (XAUUSD)
-          const xauusd = items.find(i => i.symbol === "XAUUSD");
-          if (xauusd) {
-            const xauPrice = xauusd.price;
-            const xauChange = xauusd.change_value;
-            const xauPercent = xauusd.change_percent;
-
-            const xauPriceText = toPersianNumber(xauPrice.toLocaleString());
-            const xauChangeText = toPersianNumber(Math.abs(xauChange).toLocaleString());
-            const xauPercentText = toPersianNumber(Math.abs(xauPercent).toFixed(2));
-
-            let xauColor = "text-black";
-            if (xauPercent > 0) xauColor = "text-green-600";
-            else if (xauPercent < 0) xauColor = "text-red-600";
-
-            animateElement("xauusd-info", `
-              <span>انس: ${xauPriceText}</span>
-              <span class="${xauColor}"> (${xauChangeText} | ${xauPercentText}%)</span>
-            `);
-          }
-          
-          // نمایش قیمت دلار (USD)
-          const usd = items.find(i => i.symbol === "USD");
-          if (usd) {
-            const usdPrice = usd.price;
-            const usdChange = usd.change_value;
-            const usdPercent = usd.change_percent;
-
-            const usdPriceText = toPersianNumber(usdPrice.toLocaleString());
-            const usdChangeText = toPersianNumber(Math.abs(usdChange).toLocaleString());
-            const usdPercentText = toPersianNumber(Math.abs(usdPercent).toFixed(2));
-
-            let usdColor = "text-black";
-            if (usdPercent > 0) usdColor = "text-green-600";
-            else if (usdPercent < 0) usdColor = "text-red-600";
-
-            animateElement("usd-info", `
-              <span>دلار: ${usdPriceText}</span>
-              <span class="${usdColor}"> (${usdChangeText} | ${usdPercentText}%)</span>
-            `);
-          }
-
           const now = new Date();
           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
           const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
           document.getElementById("last-update").innerText = `آخرین به‌روزرسانی: ${formattedDate} ساعت ${formattedTime}`;
-
-        } else {
-          animateElement("gold-price", "اطلاعات موجود نیست");
-          animateElement("portfolio-value", "نامشخص");
-          const profitBox = document.getElementById("profit-box");
-          profitBox.className = "rounded-xl p-6 text-center text-white bg-gray-500 persian-numbers";
-          animateElement("profit-box", "اطلاعات موجود نیست");
         }
-
       } catch (err) {
-        console.error("خطا:", err);
-        animateElement("gold-price", "خطا در دریافت");
-        animateElement("portfolio-value", "نامشخص");
-        const profitBox = document.getElementById("profit-box");
-        profitBox.className = "rounded-xl p-6 text-center text-white bg-gray-500 persian-numbers";
-        animateElement("profit-box", "خطا در محاسبه سود/زیان");
+        console.error("خطا در دریافت اطلاعات:", err);
       }
     }
 
+    // اجرای تابع دریافت داده ها
     fetchData();
-</script>
-
+    setInterval(fetchData, 60000);
+  </script>
 </body>
 </html>
