--- a/index.html
+++ b/index.html
@@ -89,17 +89,8 @@
         }
 
         if (xauusd) {
-           console.log(xauusd);  // بررسی داده های XAUUSD
-           if (xauusd.price) {
-              const color = xauusd.change_value > 0 ? 'green' : xauusd.change_value < 0 ? 'red' : 'black';
-              animateElement("xauusd-box", `<span style="color:${color}">انس: ${toPersianNumber(xauusd.price.toLocaleString())} (${toPersianNumber(Math.abs(xauusd.change_value))} | ${toPersianNumber(Math.abs(xauusd.change_percent.toFixed(2)))}%)</span>`);
-           } else {
-              console.log("قیمت انس در داده‌ها وجود ندارد.");
-              animateElement("xauusd-box", "خطا در دریافت قیمت انس");
-           }
-        } else {
-              console.log("داده‌های XAUUSD یافت نشد.");
-              animateElement("xauusd-box", "خطا در دریافت اطلاعات انس");
+          const color = xauusd.change_value > 0 ? 'green' : xauusd.change_value < 0 ? 'red' : 'black';
+          animateElement("xauusd-box", `<span style="color:${color}">انس طلا: ${toPersianNumber(xauusd.price.toLocaleString())} (${toPersianNumber(Math.abs(xauusd.change_value))} | ${toPersianNumber(Math.abs(xauusd.change_percent.toFixed(2)))}%)</span>`);
         }
 
         if (gold18) {
