--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
-    <section id="gold-box" class="bg-yellow-600 rounded-xl shadow-md p-6 text-center">
-      <h2 class="text-xl font-extrabold text-white mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
-      <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">در حال بارگذاری...</p>
+    <section id="gold-box" class="bg-white rounded-xl shadow-md p-6 text-center">
+      <h2 class="text-xl font-extrabold text-blue-700 mb-2 drop-shadow">قیمت هر گرم طلای ۱۸ عیار</h2>
+      <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">در حال بارگذاری...</p>
       <small id="gold-change" class="block mt-1 text-base persian-numbers drop-shadow">...</small>
     </section>
 
@@ -49,9 +49,9 @@
       در حال محاسبه سود/زیان...
     </section>
 
-    <section class="bg-white rounded-xl shadow-md p-6 text-center">
-      <h3 class="text-xl font-extrabold text-blue-700 mb-2 drop-shadow">دارایی کل</h3>
-      <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
+    <section class="bg-yellow-600 rounded-xl shadow-md p-6 text-center">
+      <h3 class="text-xl font-extrabold text-black mb-2 drop-shadow">دارایی کل</h3>
+      <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
     </section>
 
     <p id="last-update" class="text-sm text-gray-500 text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
