--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <header class="bg-black text-white py-4 text-center space-y-2">
     <h1 class="text-xl font-bold">پورتفوی طلای آبشده و صندوق عیار</h1>
-    <div class="text-sm font-bold space-y-1 persian-numbers">
+    <div class="text-base font-bold space-y-1 persian-numbers">
       <div id="usd-box">دلار: ...</div>
     </div>
   </header>
