--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           let percentStr = Math.abs(percent).toFixed(2);
           let valueText = toPersianNumber(valueStr);
           let percentText = toPersianNumber(percentStr);
-          let color = percent > 0 ? 'green' : percent < 0 ? 'red' : 'black';
+          const color = percent > 0 ? 'green' : percent < 0 ? 'red' : 'black';
           animateElement("gold-change", `<span style="color:${color}">(${toPersianNumber(valueStr)} | ٪${toPersianNumber(Math.abs(gold18.change_percent.toFixed(2)))})</span>`);
           
           const goldPrice = gold18.price;
